--- a/config.org
+++ b/config.org
@@ -112,8 +112,11 @@
 #+begin_src elisp
 (use-package org-roam
   :ensure t
+  :config
+  (require 'org-roam-utils)
   :bind (:map org-mode-map
               ("C-M-i" . completion-at-point)))
+;; directory where notes are stored
 (setq org-roam-directory (file-truename "~/org"))
 (org-roam-db-autosync-mode)
 
@@ -136,21 +139,22 @@
 ** Which Key
 
 #+begin_src elisp
+;; show key binding function
 (use-package which-key
-:ensure t
-:init
-        (setq which-key-side-window-location 'bottom
-                which-key-sort-order #'which-key-key-order-alpha
-                which-key-sort-uppercase-first nil
-                which-key-add-column-padding 1
-                which-key-max-display-columns nil
-                which-key-min-display-lines 6
-                which-key-side-window-slot -10
-                which-key-side-window-max-height 0.25
-                which-key-idle-delay 0.8
-                which-key-max-description-length 25
-                which-key-allow-imprecise-window-fit t
-                which-key-separator " --> " ))
+  :ensure t
+  :init
+  (setq which-key-side-window-location 'bottom
+        which-key-sort-order #'which-key-key-order-alpha
+        which-key-sort-uppercase-first nil
+        which-key-add-column-padding 1
+        which-key-max-display-columns nil
+        which-key-min-display-lines 6
+        which-key-side-window-slot -10
+        which-key-side-window-max-height 0.25
+        which-key-idle-delay 0.8
+        which-key-max-description-length 25
+        which-key-allow-imprecise-window-fit t
+        which-key-separator " --> " ))
 (which-key-mode)
 #+end_src
 
@@ -158,10 +162,10 @@
 
 #+begin_src elisp
 (use-package vertico
- :ensure t
- :init
- (vertico-mode)
-  ; Optionally enable cycling for `vertico-next' and `vertico-previous'.
+  :ensure t
+  :init
+  (vertico-mode)
+  ;; Optionally enable cycling for `vertico-next' and `vertico-previous'.
   (setq vertico-cycle t))
 #+end_src
 
@@ -177,15 +181,18 @@
  :keymaps 'override
  :prefix "SPC"
  "v" '(vterm-other-window :which-key "open vterm in other window"))
+;; keybind for closing vterm
 (add-hook 'vterm-mode-hook
           #'(lambda ()
-             (local-set-key (kbd "C-c q") #'kill-buffer-and-window)))
+              (local-set-key (kbd "C-c q") #'kill-buffer-and-window)))
 #+end_src
 
 ** Git integration
 
 #+begin_src elisp
+;; Git Integration
 (use-package magit :ensure t)
+;; highlight line where there are changes
 (use-package git-gutter :ensure t :config (global-git-gutter-mode +1))
 #+end_src
 
