--- a/config.org
+++ b/config.org
@@ -752,9 +752,10 @@
 
 #+begin_src elisp
 (use-package all-the-icons :ensure t)
-(if (string= system-type "darwin")
-    (add-to-list 'default-frame-alist '(font . "FiraCode Nerd Font 14"))
-  (add-to-list 'default-frame-alist '(font . "Monoid Nerd Font 14")))
+(when (string= system-type "gnu/linux")
+  (add-to-list 'default-frame-alist '(font . "Monoid Nerd Font 18")))
+(when (string= system-type "darwin")       
+  (add-to-list 'default-frame-alist '(font . "FiraCode Nerd Font 14")))
 #+end_src
 - for whatever reason you need the add to list for emacs server to work
 
