adding some magit configs

--- a/config.org
+++ b/config.org
@@ -11,10 +11,13 @@
 #+begin_src elisp
 (require 'package) 
 (add-to-list 'package-archives
-  '("melpa" . "https://melpa.org/packages/"))
+  '("melpa" . "https://melpa.org/packages/")) 
 (package-initialize)
 (unless package-archive-contents
   (package-refresh-contents))
+;; using http instead might stop hangs or having the following
+;; (custom-set-variables
+;;  '(gnutls-algorithm-priority "normal:-vers-tls1.3"))
 #+end_src
 
 ** Straight el
@@ -189,9 +192,11 @@
 
 ** Git integration
 
+- evil collections comes with evil magit integration
 #+begin_src elisp
 ;; Git Integration
-(use-package magit :ensure t)
+(use-package magit
+  :ensure t)
 ;; highlight line where there are changes
 (use-package git-gutter :ensure t :config (global-git-gutter-mode +1))
 #+end_src
@@ -295,7 +300,7 @@
   ;; haskell
   (haskell-mode .lsp-deferred)
   :commands (lsp lsp-deferred)
-  :bind-keymap ("C-l" . lsp-command-map)
+  :bind-keymap ("C-SPC" . lsp-command-map)
   :config
   ;; use M-? to peek references
   (define-key lsp-ui-mode-map
@@ -314,7 +319,7 @@
 #+begin_src elisp
 (use-package company
   :ensure t
-  :bind ("C-SPC" . company-mode)
+  :bind ("C-<tab>" . company-mode)
   :config (setq lsp-completion-provider :capf))
 
 (with-eval-after-load 'company
@@ -351,8 +356,10 @@
 *** Projectile
 - projectile helps with project management and navigating the project folders.
 #+begin_src elisp
-(use-package projectile :ensure t)
-(projectile-mode +1)
+(use-package projectile
+  :ensure t
+  :custom ((projectile-completion-system 'helm))
+  :config (projectile-mode))
 ;; Recommended keymap prefix on Windows/Linux
 (general-define-key
  :states '(normal)
@@ -385,8 +392,6 @@
 (use-package helm-lsp :ensure t)
 (use-package helm :ensure t
   :config (helm-mode)(require 'helm-config))
-(use-package helm-projectile :ensure t
-  :config (helm-projectile-on))
 #+end_src
 *** Haskell
 
@@ -729,8 +734,16 @@
 
 *** Tabline
 #+begin_src elisp
-(setq tab-line-new-button-show nil)  
-(setq tab-line-close-button-show nil)  
+(use-package centaur-tabs
+  :ensure t
+  :config
+  (setq
+   centaur-tabs-set-icons t
+   centaur-tabs-gray-out-icons 'buffer
+   centaur-tabs-set-modified-marker t
+   centaur-tabs-modified-marker ""
+   centaur-tabs-height 32))
+(centaur-tabs-change-fonts "Monoid Nerd Font" 160)
 #+end_src
 *** TreeSitter
 - doesn't work on apple silicon 
@@ -859,7 +872,9 @@
               (load-file "~/.emacs.d/init.el"))
             :which-key "Reload emacs config")
   "t t"   '(toggle-truncate-lines :which-key "Toggle truncate lines")
-  "t l"   '(tab-line-mode :which-key "tab line mode")
+  "t l"   '(centaur-tabs-mode :which-key "tab line mode")
+  "<left>"   '(centaur-tabs-backward :which-key "tab backward")
+  "<right>"  '(centaur-tabs-forward :which-key "tab forward")
   ;; buffers
   "b"     '(switch-to-buffer :which-key "switch to buffer")
   ;; File manipulation
